# pnpm-catalog-lint

./: .gitignore  .oxfmtrc.json  .releaserc  Cargo.toml  LICENSE  README.md  action.yml  mise.toml  package-lock.json  package.json  renovate.json
.github/workflows/: ci.yml  publish.yml  release.yml
action/: index.js  tsdown.config.ts
action/src/: index.ts
fixtures/invalid/: package.json  pnpm-workspace.yaml
fixtures/valid/: package.json  pnpm-workspace.yaml
npm/: package.json.tmpl
npm/app/: index.js  package.json  package.json.tmpl
src/: args.rs  collect.rs  main.rs  packages.rs  printer.rs  workspace.rs
src/rules/: catalog_entry_exists.rs  mod.rs  no_direct_version.rs  no_uncataloged_dependency.rs  unused_catalog_entry.rs
