[package]
name = "pnpm-catalog-lint"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Lint pnpm workspaces to enforce the catalog: protocol"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
anyhow = "1.0.101"
colored = "3.1.1"
glob = "0.3.3"
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
insta = "1.46.3"

[profile.release]
strip = true
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
